# simplex-chat-group-moderator

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
bot/: Cargo.toml  Dockerfile
bot/src/: domain.rs  infrastructure.rs
bot/src/domain/: bot_dm.rs  moderator.rs
bot/src/domain/bot_dm/: application.rs  ports.rs
bot/src/domain/moderator/: application.rs  keyword_matcher.rs  message_filter.rs  ports.rs
bot/src/domain/moderator/keyword_matcher/: tests.rs
bot/src/domain/moderator/message_filter/: filter.rs  links.rs  messages_blacklist.rs  tests.rs
bot/src/domain/moderator/message_filter/keywords/: filter.rs  tests.rs
bot/src/domain/moderator/message_filter/links/: filter.rs  tests.rs  top100.rs
bot/src/domain/moderator/message_filter/messages_blacklist/: filter.rs  tests.rs
bot/src/infrastructure/: adapters.rs  migrations.rs
bot/src/infrastructure/adapters/: cross_domain_router.rs  moderation_notification_router.rs  moderator_repo_sqlite.rs  moderator_repo_sqlite_rules.rs  simplex_adapter.rs
bot/src/infrastructure/drivers/: simplex.rs
bot/src/infrastructure/drivers/simplex/: consts.rs  driver.rs  message_split.rs  simplex.rs
bot/src/infrastructure/migrations/: 0001_init.sql  0002_add_notifications.sql  0003_add_dry_mode.sql  0004_keywords_cascade.sql  0005_link_rules.sql  0006_rule_entities.sql  0007_rename_keywords_rule_type.sql  0008_drop_group_keywords.sql  0009_split_rule_tables.sql  0010_whitelist_top100_allowed.sql  0011_messages_blacklist.sql  0012_notifications_enabled_by_default.sql
docs/: RULES.md
smp-client/: Dockerfile
webeditor/: index.html  (+1 more)
(+5 files in other folders)
