[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
rand = "0.9"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simploxide-client = { version = "0.8.1", features = ["bon"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"

[lints.clippy]

[lints.clippy.unwrap_used]
level = "deny"
priority = -1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
